--- a/style.css
+++ b/style.css
@@ -1,22 +1,43 @@
-h1 {
-    color: aquamarine;
-}
 
-h3 {
-    display: flex;
-    flex-direction: column;
+h1, h2, h3 {
     text-align: center;
-    gap: 200px;
 }
 
-.small {
-    gap: 50px;
-    font-size: 10px;
+p {
 
+    text-align: center;
+    margin: 5px 800px 15px;
+    display: block;
+
+
+}
+
+.h1 {
+
+    font-size: 60px;
 }
 
 .mocklogo {
 
-    width: 250px;
+    width: 300px;
+    margin: 50px auto;
+    margin-bottom: 5px;
+    display:block;
 
+}
+
+.vt {
+  font-family: "VT323", monospace;
+  font-weight: 400;
+  font-style:normal;
+  margin: 7px 0px;
+
+}
+
+.container {
+  width: 400px; /* Define a fixed width for the container */
+  border: 0px solid #e62121; /* Optional: for visualization */
+  overflow-wrap: break-word; /* Breaks long words if they don't fit */
+  margin: 20px auto;
+  text-align: center;
 }
